--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    retrofit_version = '2.6.2'
+    room_version = '2.2.1'
+    koin_version = '2.0.1'
+
+}
