--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.21"
-    ext.nav_version = '2.1.0-rc01'
+    ext.nav_version = "2.3.5"
     repositories {
         google()
         jcenter()
@@ -27,8 +27,6 @@ task clean(type: Delete) {
 }
 
 ext {
-    retrofit_version = '2.6.2'
-    room_version = '2.2.1'
     koin_version = '2.0.1'
-
+    retrofit_version = '2.6.2'
 }
