--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,5 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
 }
